# matrix

./: .gitignore  CLAUDE.md  Makefile  TODO.md  cd  playwright-config.json
analyst/backend/: .env  .env.example  .gitignore  Makefile  pyproject.toml
analyst/backend/src/app/: config.py  database.py  main.py
analyst/backend/src/app/api/: __init__.py
analyst/backend/src/app/api/v1/: collect.py
analyst/backend/src/app/core/: __init__.py  error_codes.py
analyst/backend/src/app/models/: __init__.py  event.py  order.py  product.py
analyst/backend/src/app/schemas/: __init__.py  collect.py  response.py
analyst/backend/src/app/services/: __init__.py  page_feedback.py  session.py
analyst/backend/tests/: test_api.py  test_integration.py
cdp/backend/: .env  .env.example  CLAUDE.md  Makefile  pyproject.toml  requirements.txt
cdp/backend/alembic/: env.py
cdp/backend/alembic/versions/: 001_initial_migration.py  002_add_user_auth_fields.py  003_add_org_structure.py  004_add_skill_table.py  005_add_project_tables.py  006_replace_skill_is_active_with_status.py  007_add_agent_prototype_tables.py  007_add_version_and_skill_version.py  008_add_agent_prototype_tables.py  8221170b9b62_merge_agent_prototype_and_skill_version_.py
cdp/backend/src/app/: __init__.py  config.py  database.py  dependencies.py  main.py
cdp/backend/src/app/core/: error_codes.py  exceptions.py  logging.py  security.py
cdp/backend/src/app/middleware/: logging_middleware.py
cdp/backend/src/app/models/: __init__.py  agent_prototype.py  agent_prototype_version.py  employee.py  employee_secondary_unit.py  employee_transfer.py  org_unit.py  org_unit_closure.py  project.py  skill.py  skill_version.py  user.py  user_employee_mapping.py
cdp/backend/src/app/repositories/: __init__.py  agent_prototype_repo.py  employee_repo.py  org_unit_repo.py  project_repo.py  skill_repo.py  skill_version_repo.py  user_repo.py
cdp/backend/src/app/schemas/: __init__.py  agent_prototype.py  auth.py  employee.py  org_unit.py  project.py  response.py  skill.py
cdp/backend/src/app/services/: __init__.py  agent_prototype_service.py  auth_service.py  employee_service.py  org_permission_service.py  org_unit_service.py  project_service.py  skill_service.py  user_service.py
cdp/backend/tests/: conftest.py
cdp/backend/tests/services/: __init__.py  test_auth_service.py  test_employee_service.py  test_org_permission_service.py  test_org_unit_service.py  test_project_service.py  test_skill_service.py
cdp/e2e-test/: .env  .env.example  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
cdp/e2e-test/.claude/commands/: craete-e2e-test.md  create-e2e-test-code.md  verify-e2e-test.md
cdp/e2e-test/.claude/rules/: e2e-rules.md
cdp/e2e-test/cases/: agent-prototype.md  login-e2e-test-cases-plan.md  login-e2e-test-cases.md  org-structure-e2e-test-cases-plan.md  org-structure-e2e-test-cases.md  skill-library-plan.md  skill-library.md
cdp/e2e-test/src/e2e/: conftest.py
cdp/e2e-test/src/e2e/pages/: __init__.py  base_page.py  customer_page.py  home_page.py  login_page.py  org_structure_page.py  register_page.py  skill_library_page.py
cdp/e2e-test/src/e2e/tests/: __init__.py  base_test.py  test_001_org_management.py  test_001_register.py  test_002_cdp_log.py  test_002_login.py  test_002_org_create.py  test_003_cdp_home.py  test_003_org_edit.py  test_004_cdp_edge.py  test_004_org_delete.py  test_005_cdp_customer.py  test_005_org_toggle_move.py  test_006_01_org_management.py  test_006_02_employee_management.py  test_006_04_dashboard_permission_ui.py  test_006_employee_management.py  test_006_org_structure.py  test_007_employee_create.py  test_008_employee_edit_delete.py  test_009_employee_account_binding.py  test_010_employee_secondary_transfer.py  test_011_employee_excel.py  test_012_dashboard.py  test_013_permission.py  test_014_ui_interaction.py  test_cdp_customer.py  test_cdp_edge.py  test_cdp_home.py  test_cdp_log.py  test_org_structure.py  test_register.py
cdp/e2e-test/tests/: test_e2e.py
neo/: a.html  (+6 more)
neo/agent-service/: .env.example  Makefile  pyproject.toml
neo/agent-service/scripts/: interview_cli.py  test_llm.py
neo/agent-service/src/agent_service/: config.py  main.py
neo/agent-service/src/agent_service/api/: __init__.py  interviews.py  websocket.py
neo/agent-service/src/agent_service/clients/: backend.py
neo/agent-service/src/agent_service/schemas/: websocket.py
neo/agent-service/tests/: test_api.py  test_backend_client.py  test_interview_agent.py
sati/: .env  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  config.toml  pyproject.toml
sati/docs/: roadmap.md
sati/src/sati/: __init__.py  calculator.py  cli.py  config.py  database.py  engine.py  generator.py  page_feedback.py  page_weight.py  simulator.py  state.py  user.py
sati/src/sati/commands/: __init__.py  simulate.py
sati/tests/: conftest.py  test_calculator.py  test_config.py  test_database.py  test_engine.py  test_generator.py  test_simulator.py  test_state.py  test_user.py
(+2242 files in other folders)
